# YMLEditor

./: .gitignore  pyproject.toml  readme.md  requirements.txt
YMLEditor/: data_manager.py  item_widget.py  settings_widget.py  structured_text.py
docs/: conf.py  readme.md  structured_text.rst
docs/_build/doctrees/: config_file.doctree  data_manager.doctree  environment.pickle  index.doctree  item_widget.doctree  modules.doctree  settings_widget.doctree  structured_text.doctree
docs/_build/html/: .buildinfo  data_manager.html  genindex.html  index.html  item_widget.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  settings_widget.html  structured_text.html  yaml_config.html
docs/_build/html/.doctrees/: data_manager.doctree  environment.pickle  index.doctree  item_widget.doctree  json_config.doctree  modules.doctree  readme.doctree  settings_widget.doctree  structured_text.doctree  yaml_config.doctree
docs/_build/html/_modules/: data_manager.html  index.html  item_widget.html  settings_widget.html  structured_text.html  yaml_config.html
docs/_build/html/_sources/: index.rst.txt  item_widget.rst.txt  json_config.rst.txt  readme.md.txt  yaml_config.rst.txt
docs/source/: conf.py  index.rst  modules.rst  readme.md  settings_widget.rst
tests/: Sample.py  bad.yml  complex.yml  complex2.yml  sample.yml  test_data_manager.py  test_item_widget.py  test_structured_text.py
