# Note that setup.py will install color_relief.sh script from the scripts directory

# python3 -m build --wheel
# python3 -m pip install .
# python3 -m pip install -e .

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "YMLEditor"
version= "0.1.13"
description = "YMLEditor is a package for quickly creating editors for simple YAML configuration files."
authors = [{ name = "corb" }]
readme = "docs/readme.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0.1",
    "PyQt6>=6.6.1",
]
keywords = ["YAML", "configuration", "editor"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
]

[tool.setuptools]
# include the YMLEditor directory as a package in the distribution.
packages = ["YMLEditor"]


[tool.setuptools.package-dir]
# The package is located in the root of the project
# directory (i.e., not inside a src/ or lib/ directory)
"" = "."

[project.urls]
Homepage = "https://your.project"
Documentation = "https://docs.your.project"
Repository = "https://github.com/corb555/YMLEditor"