
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "YMLEditor"
version= "0.1.17"
description = "YMLEditor is a package for quickly creating editors for simple YAML configuration files."
authors = [{ name = "corb" }]
readme = "docs/readme.md"
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0.1",
    "PyQt6>=6.6.1",
]
keywords = ["YAML", "configuration", "editor"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
]

[project.urls]
Repository = "https://github.com/corb555/YMLEditor"

[tool.setuptools]
# include the YMLEditor directory as a package in the distribution.
packages = ["YMLEditor"]

[tool.setuptools.package-dir]
# The package is located in the root of the project
# directory (i.e., not inside a src/ or lib/ directory)
"" = "."

